# AngleRender

./: .gitignore  CMakeLists.txt  README.md  main.cpp
angle_libs/: libEGL.dylib
include/glad/: glad.h
src/: glad.c
